<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/activity_background"
    tools:context=".MainActivity">
    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent" >
        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>
    </Toolbar>

    <LinearLayout
        android:padding="@dimen/elements_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/elements_margin"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            app:hintEnabled="true"
            app:endIconMode="clear_text"
            android:id="@+id/loginLayout"
            android:hint="@string/login"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textShortMessage"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/elements_margin"
            android:id="@+id/passwordLayout"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            app:hintEnabled="true"
            app:endIconMode="password_toggle"
            android:hint="@string/password"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"

                android:inputType="textPassword"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enterButton"

            android:layout_width="match_parent"
            android:padding="@dimen/elements_margin"
            app:cornerRadius="@dimen/edit_corner_radius"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:layout_marginTop="@dimen/elements_margin"
            />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>